[project]
name = "mcp-com-server"
version = "0.1.0"
description = "mcp-com-server - Model Context Protocol Wrapper for COM servers."
readme = "README.md"
authors = [{ name = "Johann Rehberger, WUNDERWUZZI, LLC" }]
keywords = ["com", "windows", "mcp", "llm", "automation"]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [ 
    "pywin32",
    "mcp"
]
